[gd_scene load_steps=25 format=2]

[ext_resource path="res://gui/screens/intro/scripts/Intro.gd" type="Script" id=1]
[ext_resource path="res://gui/screens/login/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/screens/intro/font/MinimalPixel_v2 (1).ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gui/screens/intro/assets/backgrounds/night_parallax/1.png" type="Texture" id=4]
[ext_resource path="res://gui/screens/intro/assets/backgrounds/night_parallax/2.png" type="Texture" id=5]
[ext_resource path="res://gui/screens/intro/assets/backgrounds/night_parallax/4.png" type="Texture" id=6]
[ext_resource path="res://gui/screens/intro/assets/backgrounds/night_parallax/3.png" type="Texture" id=7]
[ext_resource path="res://gui/screens/intro/assets/elements/angel/angel6.png" type="Texture" id=8]
[ext_resource path="res://gui/screens/intro/assets/elements/angel/angel5.png" type="Texture" id=9]
[ext_resource path="res://gui/screens/intro/assets/elements/angel/angel8.png" type="Texture" id=10]
[ext_resource path="res://gui/screens/intro/assets/elements/angel/angel7.png" type="Texture" id=11]
[ext_resource path="res://gui/screens/intro/assets/elements/angel/angel3.png" type="Texture" id=12]
[ext_resource path="res://gui/screens/intro/assets/elements/angel/angel4.png" type="Texture" id=13]
[ext_resource path="res://gui/screens/intro/assets/elements/angel/angel2.png" type="Texture" id=14]
[ext_resource path="res://gui/screens/intro/assets/elements/angel/angel1.png" type="Texture" id=15]
[ext_resource path="res://music/xDeviruchi - Title Theme .wav" type="AudioStream" id=16]

[sub_resource type="AnimatedTexture" id=12]
frames = 8
fps = 8.0
frame_0/texture = ExtResource( 15 )
frame_1/texture = ExtResource( 14 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 12 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 13 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 9 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 8 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 11 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 10 )
frame_7/delay_sec = 0.0

[sub_resource type="DynamicFont" id=3]
size = 124
outline_size = 5
outline_color = Color( 0.0627451, 0.262745, 0.541176, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 46
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("OnScreenTextControl/Angel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 612, 1081 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OnScreenTextControl/Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OnScreenTextControl/StartMessage:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hider:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("OnScreenTextControl:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ParallaxBackground/Layer1:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ParallaxBackground/Layer2:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ParallaxBackground/Layer3:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ParallaxBackground/Layer4:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "angel_slide_in"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("OnScreenTextControl/Angel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 612, 1081 ), Vector2( 612, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OnScreenTextControl/Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OnScreenTextControl/StartMessage:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hider:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "blink_text"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("OnScreenTextControl/StartMessage:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OnScreenTextControl/StartMessage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hider:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "screen_out"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Hider:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OnScreenTextControl:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ParallaxBackground/Layer1:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ParallaxBackground/Layer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ParallaxBackground/Layer3:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ParallaxBackground/Layer4:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "title_fade_in"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("OnScreenTextControl/Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OnScreenTextControl/StartMessage:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hider:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[node name="Intro" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
autoplay = true

[node name="Hider" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Layer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer1"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 4 )
centered = false

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Layer2"]
position = Vector2( -310, -287 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )
centered = false

[node name="Layer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/Layer3"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 7 )
centered = false

[node name="Layer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/Layer4"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 6 )
centered = false

[node name="OnScreenTextControl" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Angel" type="TextureRect" parent="OnScreenTextControl"]
margin_left = 612.0
margin_top = 1081.0
margin_right = 734.0
margin_bottom = 1198.0
rect_scale = Vector2( 6, 6 )
texture = SubResource( 12 )

[node name="Title" type="Label" parent="OnScreenTextControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1880.0
margin_bottom = 1040.0
custom_colors/font_color = Color( 0.423529, 0.435294, 0.772549, 1 )
custom_colors/font_color_shadow = Color( 0.427451, 0.745098, 0.972549, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/line_spacing = 4
custom_fonts/font = SubResource( 3 )
text = "THE  LAST  OMEN"
align = 1
valign = 1

[node name="StartMessage" type="Label" parent="OnScreenTextControl"]
visible = false
margin_top = 600.0
margin_right = 1920.0
margin_bottom = 750.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.109804, 0.368627, 0.576471, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/line_spacing = 5
custom_fonts/font = SubResource( 8 )
text = "PRESS   [ SPACE ]   TO CONTINUE"
align = 1
valign = 1

[node name="ScreenAnimations" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/angel_slide_in = SubResource( 13 )
anims/blink_text = SubResource( 9 )
anims/screen_out = SubResource( 15 )
anims/title_fade_in = SubResource( 14 )

[connection signal="animation_finished" from="ScreenAnimations" to="." method="_on_ScreenAnimations_animation_finished"]
